corpus/baselines/conformance/salsa/inferringClassMembersFromAssignments2.errors.txt
a.js(5,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== a.js (1 errors) ====
    OOOrder.prototype.m = function () {
        this.p = 1
    }
    function OOOrder() {
        this.x = 1
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }
    